--- a/SOW_MKI49_2018_SEM1_V_assignment_6-Final.ipynb
+++ b/SOW_MKI49_2018_SEM1_V_assignment_6-Final.ipynb
@@ -2,6 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Group number: 17\n",
+    "\n",
+    "* Sameera Sandaruwan, s1014012\n",
+    "* Mohit Jethwani, s1019474\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "colab_type": "text",
     "collapsed": true,
